codepkg/objects/Country_Of_Origin__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>CAMBODIA</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>EGYPT</fullName>
                </value>
                <value>
                    <fullName>EL SALVADOR</fullName>
                </value>
                <value>
                    <fullName>HONG KONG</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>INDONESIA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>JORDAN</fullName>
                </value>
                <value>
                    <fullName>SOUTH KOREA</fullName>
                </value>
                <value>
                    <fullName>TURKEY</fullName>
                </value>
                <value>
                    <fullName>UNITED KINGDOM</fullName>
                </value>
                <value>
                    <fullName>UNITED STATE</fullName>
                </value>
                <value>
                    <fullName>USA OF IMPORTED MATERIALS</fullName>
                </value>
                <value>
                    <fullName>VIETNAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnglishLanguage__c</fullName>
        <label>EnglishLanguage</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language1__c</fullName>
        <label>Language1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language2__c</fullName>
        <label>Language2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language3__c</fullName>
        <label>Language3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Country Of Origins</relationshipLabel>
        <relationshipName>Country_Of_Origins</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Country Of Origin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Country__c</columns>
        <columns>EnglishLanguage__c</columns>
        <columns>Language1__c</columns>
        <columns>Language2__c</columns>
        <columns>Language3__c</columns>
        <columns>Language4__c</columns>
        <columns>Language5__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Of Origin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Of Origins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>